--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,27 @@
     clear: both;
     display:table;
 }
+/* incomincio ad impostare un contenitore con delle misure che andrò a togliere */
+.container{
+    width: 80%;
+    margin: 20px auto;
+    border: 2px dashed black;
+}
+.float{
+    float: left;
+    width: 32%;
+}
+.img{
+   width: 100%;
+}
+/* richiamo delle classi float */
+.right{
+    float: right;
+}
+.center{
+   margin: 0 2%;
+}
+
+
+
+
