--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -28,6 +28,52 @@
 /* immagine */
 .img{
    width: 100%;
+   height: 500px;
+   background-position: center;
+   background-size: cover;
+}
+/* prima immagine */
+.first{
+    background-image: url(../img/1.webp);
+}
+
+.container-float:hover .first{
+    background-image: url(../img/1b.webp);
+}
+/* seconda immagine */
+.second{
+    background-image: url(../img/2.webp);
+}
+.container-float:hover .second{
+    background-image: url(../img/2b.webp);
+}
+/* terza immagine */
+.third{
+    background-image: url(../img/3.webp);
+}
+.container-float:hover .third{
+    background-image: url(../img/3b.webp);
+}
+/* quarta immagine */
+.fourth{
+    background-image: url(../img/4.webp);
+}
+.container-float:hover .fourth{
+    background-image: url(../img/4b.webp);
+}
+/* quinta immagine */
+.fifth{
+    background-image: url(../img/5.webp);
+}
+.container-float:hover .fifth{
+    background-image: url(../img/5b.webp);
+}
+/* sesta immagine */
+.sixth{
+    background-image: url(../img/6.webp);
+}
+.container-float:hover .sixth{
+    background-image: url(../img/6b.webp);
 }
 
 /* richiamo delle classi float */
@@ -38,21 +84,6 @@
 .center{
    margin-left: 2%;
    margin-right: 2%;
-}
-
-/* hover */
-.img-hover{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
- /* trovata soluzione in internet     */
-    display: none;    
-}
-
-.float:hover .img-hover{
- /* trovata soluzione in internet     */    
-    display: inline-block;
 }
 
 .float:hover .heart{
